--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 github.client.id=f88fba756cd617f9cae0
 github.client.secret=58338ca9a6371e90b7106b16a75e224fa6354a29
 github.redirect.uri=http://localhost:8080/callback
+spring.datasource.url=jdbc:h2:~/community
+#spring.datasource.username=
+#spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
